Bugfix: z-index was not appear, solved

--- a/position/_position.scss
+++ b/position/_position.scss
@@ -31,6 +31,11 @@
       #{$position}: $value;
     }
   }
+
+  // z-index, if exist
+  @if $z != null {
+    z-index: $z;
+  }
 }
 
 @mixin absolute($values, $z: null) {
